"data validation added"

--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -68,11 +68,10 @@
     "from pathlib import Path\n",
     "\n",
     "@dataclass(frozen=True)\n",
-    "class DataIngestionConfig:\n",
+    "class DataValidationConfig:\n",
     "    root_dir: Path\n",
-    "    source_URL: str\n",
-    "    local_data_file: Path\n",
-    "    unzip_dir: Path"
+    "    STATUS_FILE: str\n",
+    "    ALL_REQUIRED_FILES: list"
    ]
   },
   {
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,85 +101,86 @@
     "        \n",
     "        create_directories([self.config.artifacts_root])\n",
     "    \n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
-    "        config = self.config.data_ingestion\n",
+    "    def get_data_validation_config(self) -> DataValidationConfig:\n",
+    "        config = self.config.data_validation\n",
     "        \n",
     "        create_directories([config.root_dir])\n",
     "        \n",
-    "        data_ingestion_config = DataIngestionConfig(\n",
+    "        data_validation_config = DataValidationConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir\n",
+    "            STATUS_FILE=config.STATUS_FILE,\n",
+    "            ALL_REQUIRED_FILES=config.ALL_REQUIRED_FILES\n",
     "        )\n",
     "        \n",
-    "        return data_ingestion_config"
+    "        return data_validation_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import urllib.request as request\n",
-    "import zipfile\n",
-    "from textSummarizer.logging import logger\n",
-    "from textSummarizer.utils.common import get_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DataIngestion:\n",
-    "    def __init__(self, config: DataIngestionConfig):\n",
-    "        self.config=config\n",
-    "        \n",
-    "    def download_file(self):\n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
-    "                url = self.config.source_URL,\n",
-    "                filename = self.config.local_data_file\n",
-    "            ),\n",
-    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
-    "        else:\n",
-    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
-    "            \n",
-    "    def extract_zip_file(self):\n",
-    "        if not os.path.exists(self.config.unzip_dir):\n",
-    "            os.makedirs(self.config.unzip_dir)\n",
-    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(self.config.unzip_dir)\n",
-    "            "
+    "from textSummarizer.logging import logger"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataValidation:\n",
+    "    def __init__(self, config:DataValidationConfig):\n",
+    "        self.config = config\n",
+    "        \n",
+    "    def validate_all_files_exist(self) -> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "            \n",
+    "            all_files = os.listdir(os.path.join(\"artifacts\",\"data_ingestion\",\"samsum_dataset\"))\n",
+    "            \n",
+    "            for file in all_files:\n",
+    "                if file not in self.config.ALL_REQUIRED_FILES:\n",
+    "                    validation_status = False\n",
+    "                    with open(self.config.STATUS_FILE,'w') as f:\n",
+    "                        f.write(f\"Validation Status: {validation_status}\")\n",
+    "                else:\n",
+    "                    validation_status = True\n",
+    "                    with open(self.config.STATUS_FILE,'w') as f:\n",
+    "                        f.write(f\"Validation Status: {validation_status}\")\n",
+    "                        \n",
+    "            return validation_status\n",
+    "        \n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            with open(self.config.STATUS_FILE,'w') as f:\n",
+    "                f.write(f\"Validation Status: {validation_status}\")\n",
+    "            raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-09-18 17:51:06,987: INFO: common: Directory artifacts already exists]\n",
-      "[2023-09-18 17:51:06,989: INFO: common: Directory artifacts/data_ingestion already exists]\n",
-      "[2023-09-18 17:51:06,990: INFO: 2789725320: File already exists of size: 7.54 MB]\n"
+      "[2023-09-18 18:35:34,483: INFO: common: Directory artifacts already exists]\n",
+      "[2023-09-18 18:35:34,485: INFO: common: Directory artifacts/data_validation already exists]\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
-    "    data_ingestion_config = config.get_data_ingestion_config()\n",
-    "    data_ingestion = DataIngestion(config= data_ingestion_config)\n",
-    "    data_ingestion.download_file()\n",
-    "    data_ingestion.extract_zip_file()\n",
-    "except Exception as e:\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(config= data_validation_config)\n",
+    "    data_validation.validate_all_files_exist()\n",
+    "except Exception as e :\n",
     "    raise e"
    ]
   },
